--- a/polygondex/src/App.css
+++ b/polygondex/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+
+#root {
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body,
+#main {
+  background-color: #393D44;
+  height: 100%;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin: 0px;
+}
+
+h1 {
+  font-size: 50px;
+  color: white;
+  margin: 5px;
+  letter-spacing: 15px;
+}
+
+h2 {
+  color: white;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.button {
+  text-decoration: none;
+  padding: 15px;
+  border: 1px solid grey;
+}
+
+.button:hover {
+  background-color: darkred;
+  border: 1px solid darkred;
+
+}
+
+.nav {
+  width: 100%;
+}
+
+.user-name {
+  margin-bottom: 2px;
+}
+
+input {
+  display: inherit;
+  margin: 3%;
+  height: 30px;
+  width: 65%;
+  background-color: transparent;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  display: inherit;
+  text-align: center;
+  height: 27px;
+  width: 57px;
+  background-color: transparent;
+  color: white;
+  justify-content: center;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15%;
+  margin: 6%;
+  background-color: rgba(0, 0, 0, 0.65);
+}
+
+input {
+  padding-left: 5px;
 }
